--- a/index.html
+++ b/index.html
@@ -44,7 +44,52 @@
 
 
 
-    <main></main>
+    <main>
+
+        <!-- Feature list section -->
+        <section class="feature-list">
+            <div class="feature-list-image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-list-content">
+                <h3><span class="quick-list">Quick list </span><span class="of-our">of Our </span><span class="features"> Features</span></h3>
+                <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- Feature Section -->
+        <section>
+            <div class="feature">
+                <div class="feature-content">
+                    <h3>Features you will love & enjoy</h3>
+                    <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="card">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    </div>
+                    <div class="card">
+                        <h4>Drag & Drop Builder</h4>
+                        <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Awesome Modern Design</h4>
+                        <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Easy to Edit</h4>
+                        <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="feature-image">
+                    <img src="images/architect.png" alt="">
+                    <button class="btn-primary ten-years"><h3>10+Year</h3><p>Experience</p></button>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
