--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section>
             <div class="feature">
                 <div class="feature-content">
-                    <h3>Features you will love & enjoy</h3>
+                    <h3 class="h3-primary">Features you will love & enjoy</h3>
                     <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <div class="card">
                         <h4>Dexktop & Mobile Version</h4>
@@ -89,11 +89,70 @@
                 </div>
             </div>
         </section>
+
+        <!-- Section Some Fact -->
+       <section>
+        <div class="some-fact">
+            <h3 class="h3-primary">Some Facts</h3>
+            <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+        </div>
+       </section> 
+
+       <!-- Card Section -->
+       <section>
+        <div class="card-name">
+            <div class="card-list">
+                <img src="images/icons/ribon.png" alt="">
+                <h3 class="h3-primary">54</h3>
+                <p class="pprimary">Awards Winnings</p>
+            </div>
+            <div class="card-list">
+                <img src="images/icons/projects.png" alt="">
+                <h3 class="h3-primary">1458</h3>
+                <p class="pprimary">Project Finished</p>
+            </div>
+            <div class="card-list">
+                <img src="images/icons/customers.png" alt="">
+                <h3 class="h3-primary">590</h3>
+                <p class="pprimary">Clients Worked</p>
+            </div>
+            <div class="card-list">
+                <img src="images/icons/email.png" alt="">
+                <h3 class="h3-primary">22578</h3>
+                <p class="pprimary">Email Send</p>
+            </div>
+        </div>
+       </section>
+
+       <!-- Sponsor section  -->
+
+       <section>
+        <div class="sponsor">
+            <h3 class="h3-primary">Our Sponspors</h3>
+            <p class="p-primary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+       </section>
+
+       <!-- section social -->
+       <section>
+        <div class="social">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+       </section>
     </main>
 
 
 
-    <footer></footer>
+
+    <footer>
+        <div class="footer-content">
+            <p class="p-primary">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 
 
 </body>
